--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
+    "axios": "^1.12.2",
+    "dompurify": "^3.3.0",
+    "next": "16.0.0",
+    "openai": "^6.7.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.0"
+    "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "daisyui": "^5.3.10",
     "tailwindcss": "^4"
   }
 }
