--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.12.2",
     "dompurify": "^3.3.0",
+    "lucide-react": "^0.552.0",
     "next": "16.0.0",
     "openai": "^6.7.0",
     "react": "19.2.0",
